Changelog
=========

1.0b7 - 
------------------

* Apply patch from Lukas Zdych to fix absolute prefix.
  [optilude]

* Added through the web resolving of the rules file.
  [Marshall Scorcio]

1.0b6 - 2009-10-27
------------------

* Updated xdv compiler
  [lrowe]

1.0b5 - 2009-10-12
------------------

* Re-licensed to the BSD license.
  [optilude]

* Added support for the `extrauri` parameter.
  [Matous Hora]

1.0b4 - 2009-03-30
------------------

* Renamed the 'theme_uri' parameter to just 'theme', since it also allows
  filenames.
  [optilude]

* Added support for declaring some unthemed URLs via the 'notheme' option,
  based on pattern patching.
  [optilude]

* Fixed various Windows related bugs.
  [optilude]

1.0b3 - 2009-03-26
------------------

* We now allow local file paths as the theme uri, and let compiler.xsl pick
  its own boilerplate.xsl by default if none is given.
  [optilude]

1.0b2 - 2009-02-25
------------------

* Added console script for compiling the theme offline
  [optilude]

1.0b1 - 2009-02-24
------------------

* Initial release
